--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ select {
         display: flex;
         flex-direction: column;
     }
+    .row-phone {
+        display: flex;
+
+    }
     body {
         margin: 1.5em 1em 1.5em 1em;
     }
